7. IaC/551 Terraform - AWS/Practical/modules/vpc/igw.tf

resource "aws_internet_gateway" "demo-igw" {

  vpc_id = aws_vpc.demo-vpc.id 

  tags = {
    Name = "demo--igw"
  }
}
